fix title to reflect assignment name

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Coding Language Picker</title>
+  <title>Programming Language Suggester</title>
 </head>
 <body>
   <div class="container">
+    <form id="quiz-form">
 
+    </form>
   </div>
 </body>
 </html>
