add basic layout, slideToggle effect between questions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,80 @@
 <body>
   <div class="container">
     <form id="quiz-form">
+      <div class="row" id="question1">
+        <h4 class="col-5">A prompt about the question 1.</h4>
+        <div class="col-7">
+            <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#" checked>
+            <label>Foo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#">
+            <label>Foo</label>
+          </div>
+        </div>
+        <button class="btn btn-secondary btn-block next-question">Next question</button>
+      </div>
 
+      <div class="row initially-hidden" id="question2">
+        <h4 class="col-5">A prompt about the question 2.</h4>
+        <div class="col-7">
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#" checked>
+            <label>Foo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#">
+            <label>Foo</label>
+          </div>
+        </div>
+        <button class="btn btn-secondary btn-block next-question">Next question</button>
+      </div>
+
+      <div class="row initially-hidden" id="question3">
+        <h4 class="col-5">A prompt about the question 3.</h4>
+        <div class="col-7">
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#" checked>
+            <label>Foo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#">
+            <label>Foo</label>
+          </div>
+        </div>
+        <button class="btn btn-secondary btn-block next-question">Next question</button>
+      </div>
+
+      <div class="row initially-hidden" id="question4">
+        <h4 class="col-5">A prompt about the question 4.</h4>
+        <div class="col-7">
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#" checked>
+            <label>Foo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#">
+            <label>Foo</label>
+          </div>
+        </div>
+        <button class="btn btn-secondary btn-block next-question">Next question</button>
+      </div>
+      
+      <div class="row initially-hidden" id="question5">
+        <h4 class="col-5">A prompt about the question 5.</h4>
+        <div class="col-7">
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#" checked>
+            <label>Foo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type=radio class="form-check-input" name="#" value="#">
+            <label>Foo</label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-secondary btn-block">Show me the result!</button>
+      </div>
     </form>
   </div>
 </body>
