WIP: trying to fix bug where showing the next question breaks bootstrap columns

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="row" id="question1">
         <h4 class="col-5">A prompt about the question 1.</h4>
         <div class="col-7">
-            <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#" checked>
             <label>Foo</label>
           </div>
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#">
             <label>Foo</label>
           </div>
@@ -28,11 +28,11 @@
       <div class="row initially-hidden" id="question2">
         <h4 class="col-5">A prompt about the question 2.</h4>
         <div class="col-7">
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#" checked>
             <label>Foo</label>
           </div>
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#">
             <label>Foo</label>
           </div>
@@ -43,11 +43,11 @@
       <div class="row initially-hidden" id="question3">
         <h4 class="col-5">A prompt about the question 3.</h4>
         <div class="col-7">
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#" checked>
             <label>Foo</label>
           </div>
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#">
             <label>Foo</label>
           </div>
@@ -58,11 +58,11 @@
       <div class="row initially-hidden" id="question4">
         <h4 class="col-5">A prompt about the question 4.</h4>
         <div class="col-7">
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#" checked>
             <label>Foo</label>
           </div>
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#">
             <label>Foo</label>
           </div>
@@ -73,11 +73,11 @@
       <div class="row initially-hidden" id="question5">
         <h4 class="col-5">A prompt about the question 5.</h4>
         <div class="col-7">
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#" checked>
             <label>Foo</label>
           </div>
-          <div class="form-check form-check-inline">
+          <div class="form-check">
             <input type=radio class="form-check-input" name="#" value="#">
             <label>Foo</label>
           </div>
