--- a/index.html
+++ b/index.html
@@ -25,61 +25,69 @@
         <button class="btn btn-secondary btn-block next-question">Next question</button>
       </div>
 
-      <div class="row initially-hidden" id="question2">
-        <h4 class="col-5">A prompt about the question 2.</h4>
-        <div class="col-7">
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#" checked>
-            <label>Foo</label>
-          </div>
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#">
-            <label>Foo</label>
-          </div>
-        </div>
-        <button class="btn btn-secondary btn-block next-question">Next question</button>
-      </div>
-
-      <div class="row initially-hidden" id="question3">
-        <h4 class="col-5">A prompt about the question 3.</h4>
-        <div class="col-7">
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#" checked>
-            <label>Foo</label>
-          </div>
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#">
-            <label>Foo</label>
+      <div class="initially-hidden" id="question2">
+        <div class="row">
+          <h4 class="col-5">A prompt about the question 2.</h4>
+          <div class="col-7">
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#" checked>
+              <label>Foo</label>
+            </div>
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#">
+              <label>Foo</label>
+            </div>
           </div>
         </div>
         <button class="btn btn-secondary btn-block next-question">Next question</button>
       </div>
 
-      <div class="row initially-hidden" id="question4">
-        <h4 class="col-5">A prompt about the question 4.</h4>
-        <div class="col-7">
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#" checked>
-            <label>Foo</label>
+      <div class="initially-hidden" id="question3">
+        <div class="row">
+          <h4 class="col-5">A prompt about the question 3.</h4>
+          <div class="col-7">
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#" checked>
+              <label>Foo</label>
+            </div>
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#">
+              <label>Foo</label>
+            </div>
           </div>
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#">
-            <label>Foo</label>
+        </div>
+        <button class="btn btn-secondary btn-block next-question">Next question</button>
+      </div>
+
+      <div class="initially-hidden" id="question4">
+        <div class="row">
+          <h4 class="col-5">A prompt about the question 4.</h4>
+          <div class="col-7">
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#" checked>
+              <label>Foo</label>
+            </div>
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#">
+              <label>Foo</label>
+            </div>
           </div>
         </div>
         <button class="btn btn-secondary btn-block next-question">Next question</button>
       </div>
       
       <div class="row initially-hidden" id="question5">
-        <h4 class="col-5">A prompt about the question 5.</h4>
-        <div class="col-7">
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#" checked>
-            <label>Foo</label>
-          </div>
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#">
-            <label>Foo</label>
+        <div class="row">
+          <h4 class="col-5">A prompt about the question 5.</h4>
+          <div class="col-7">
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#" checked>
+              <label>Foo</label>
+            </div>
+            <div class="form-check">
+              <input type=radio class="form-check-input" name="#" value="#">
+              <label>Foo</label>
+            </div>
           </div>
         </div>
         <button type="submit" class="btn btn-secondary btn-block">Show me the result!</button>
