add attributes for all inputs, begin js logic

--- a/index.html
+++ b/index.html
@@ -10,32 +10,36 @@
 <body>
   <div class="container">
     <form id="quiz-form">
-      <div class="row" id="question1">
-        <h4 class="col-5">A prompt about the question 1.</h4>
-        <div class="col-7">
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#" checked>
-            <label>Foo</label>
+      <div id="question1">
+        <div class="row">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
+          <h4 class="col-5">You respond:</h4>
+          <div class="col-7">
+            <div class="form-check">
+              <input type="radio" class="form-check-input" id="q1r1" name="question1" value="#" checked>
+              <label for="q1r1">Foo</label>
+            </div>
+            <div class="form-check">
+              <input type="radio" class="form-check-input" id="q1r2" name="question1" value="#">
+              <label for="q1r2">Foo</label>
+            </div>
           </div>
-          <div class="form-check">
-            <input type=radio class="form-check-input" name="#" value="#">
-            <label>Foo</label>
-          </div>
-        </div>
+        </div> 
         <button class="btn btn-secondary btn-block next-question">Next question</button>
       </div>
 
       <div class="initially-hidden" id="question2">
         <div class="row">
-          <h4 class="col-5">A prompt about the question 2.</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
+          <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#" checked>
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q2r1" name="question2" value="#" checked>
+              <label for="q2r1">Foo</label>
             </div>
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#">
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q2r2" name="question2" value="#">
+              <label for="q2r2">Foo</label>
             </div>
           </div>
         </div>
@@ -44,15 +48,16 @@
 
       <div class="initially-hidden" id="question3">
         <div class="row">
-          <h4 class="col-5">A prompt about the question 3.</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
+          <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#" checked>
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q3r1" name="question3" value="#" checked>
+              <label for="q3r1">Foo</label>
             </div>
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#">
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q3r2" name="question3" value="#">
+              <label for="q3r2">Foo</label>
             </div>
           </div>
         </div>
@@ -61,36 +66,44 @@
 
       <div class="initially-hidden" id="question4">
         <div class="row">
-          <h4 class="col-5">A prompt about the question 4.</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
+          <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#" checked>
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q4r1" name="question4" value="#" checked>
+              <label for="q4r1">Foo</label>
             </div>
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#">
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q4r2" name="question4" value="#">
+              <label for="q4r2">Foo</label>
             </div>
           </div>
         </div>
         <button class="btn btn-secondary btn-block next-question">Next question</button>
       </div>
       
-      <div class="row initially-hidden" id="question5">
+      <div class="initially-hidden" id="question5">
         <div class="row">
-          <h4 class="col-5">A prompt about the question 5.</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
+          <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#" checked>
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q5r1" name="question5" value="#" checked>
+              <label for="q5r1">Foo</label>
             </div>
             <div class="form-check">
-              <input type=radio class="form-check-input" name="#" value="#">
-              <label>Foo</label>
+              <input type="radio" class="form-check-input" id="q5r2" name="question5" value="#">
+              <label for="q5r2">Foo</label>
+            </div>
+            <div class="form-check">
+              <input type="radio" class="form-check-input" id="q5r3" name="question5" value="#">
+              <label for="q5r3">Foo</label>
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-secondary btn-block">Show me the result!</button>
+        <button type="submit" class="btn btn-secondary btn-block">Await your fate.</button>
+
+        <div class=""
       </div>
     </form>
   </div>
