finish writing the story

--- a/index.html
+++ b/index.html
@@ -32,54 +32,68 @@
       </div>
 
       <div class="initially-hidden" id="question2">
+        <p><span id="question1-response"></span></p>
+        <p>The Inspector sets their heavy briefcase on the table and releases the clasps. They give you a significant look, before opening the lid. In spite of the size of the box, only two small items are nestled inside, in ample padding. The Inspector selects one of these, a small box with various wires attached to it, and places it between you on the desk. The piercing gaze meets your eyes again.</p>
+        <p>Supressing any reservations, you nod. It would be impossible to turn back, at this point. Better to undergo the testing here, "voluntarily", than in a concrete room at the local precinct. At your assent, the Inspector attaches the wires, which you now notice terminate in small clamps, to a few of your fingertips, and the lobe of your left ear. Returning to the briefcase, the Inspector lifts the second object, a sleek, blue-glassed monocle, and holds it to their right eye.</p>
+        <p>"As you understand, this is an inquiry," they say. "I will describe to you a number of hypothetical situations. After describing the situation, I will ask you a question. Simply respond honestly." Another significant look. "I will advise you that the results of the examination will be more accurate, the less you hesitate in your responses."</p>
+        <p>After a moment, they continue."Let's begin. You are a well appointed vacation rental in the hills of a picturesque winter resort-town, with your parter. It is evening, and you have just eaten dinner. The air still contains the lingering scent of your meal. The dinner conversation was pleasant, but afterword your partner mentioned off-handedly that you have been invited to an apres-ski party tomorrow, by their cousin, Nathan. Your last interaction with Nathan was several months ago. At that time, he had returned your car after borrowing it, with a noticable dent in the front right fender. He claimed it was a hit and run event while he was parallel parked in a residential neighborhood, while visiting a friend. But, you think he was lying.</p>
+        <p>"What did you have for dinner?"</p>
         <div class="row">
-          <p><span id="question1response"></span></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q2r1" name="question2" value="#" checked>
-              <label for="q2r1">Foo</label>
+              <label for="q2r1">"Turkey, with mashed potatoes and gravy."</label>
             </div>
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q2r2" name="question2" value="#">
-              <label for="q2r2">Foo</label>
+              <label for="q2r2">"Roasted eggplant."</label>
             </div>
           </div>
         </div>
-        <button class="btn btn-secondary btn-block next-question">Next question</button>
+        <button class="btn btn-secondary btn-block next-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question3">
+        <p>The box whirs mechanically. The Inspector glances down at it briefly, taps the side of their monocle, and continues.</p>
+        <p>"You are a third-term city councilperson for your birthtown. You have just left a contentious town-hall meeting regarding a proposal to develop what is currently a city park into a new business center. The investors in the project are an out of town-cosortium of developers who have a successful history of such projects. In those instances, the developments led to a significant increase in tax income in their respective locations, and creation of hundreds of new jobs. The opponents of the proposal argue that the historical value of the park should disqualify it from any discussion of possible redevlopment.</p>
+        <p>The park is in fact the town's oldest, and features a number of notable statues created by a nationally-famous sculptor who was raised in the town and passed away seven years ago. However, the park has not been well maintained, and recently there has been an increase in crime associated with the area. Noting the significance of the statues, the out of state investors have offered to feature the artwork in a speical plaza contained within the new development, or to relocate the statues to other city properties, at their own expense.</p>
+        <p>As you are mulling over the situation during your walk home, a care swerves unexpectedly into a bicycle lane, forcing a cyclist using the lane to likewise swerve onto the sidewalk. Unfortunately, they fail to negotiate the curb, and they end up crashing into you, tearing a large hole in your suit, and brusing your side. It hurts quite a lot, and as you pull the torn fabric away, you notice that you are bleeding at a frightening rate. You think you might see bone.</p>
+        <p>"The cyclist has picked himself up from the ground, and noticing your injuries, begins to frantically apologize and reassure you. He pulls out his communicator and begin to dial for emergency services.</p>
+        <p>"What color is your suit?"</p>
         <div class="row">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q3r1" name="question3" value="#" checked>
-              <label for="q3r1">Foo</label>
+              <label for="q3r1">"Slate grey."</label>
             </div>
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q3r2" name="question3" value="#">
-              <label for="q3r2">Foo</label>
+              <label for="q3r2">"What... I'm bleeding! Red?! I mean, it is grey, I suppose."</label>
             </div>
           </div>
         </div>
-        <button class="btn btn-secondary btn-block next-question">Next question</button>
+        <button class="btn btn-secondary btn-block next-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question4">
+        <p>The Inspector examines the box again for a few moments before returning their gaze to you.</p>
+        <p>"I apologize for the graphic nature of that last question. In order to be accurate, the inquiry is designed to elicit emotional and phyisiological responses. I hope you understand."</p>
+        <p>Without waiting for you to possibly respond to their comments, the Inspector continues immediately with the next question.</p>
+        <p>"You are five years old. Your parents have left you home for the evening with a babysitter while they visit another couple for a date night. You are an only child, and are playing fetch with your pet dog in the backyard, while the babysitter watches from the porch. It is Autumn, and your dog has ignored your last throw of the ball to fixate on a pile of leaves beneath a large oak tree in the middle of the yard. You run over to hug the dog and try to regain its attention. She ignores you and begins to dig at the pile of leaves.</p>
+        <p>The last rays of the setting sun are filtering through the remaining oak leaves above, dappling the fallen leaves with spots of purple, mauve, and dark orange shadow. As your dog digs, you notice that underneath the leaves is a new mound of freshly turned dirt. The dog speeds up her digging, and darts her snout in to seize at a buried object. As she turns to you, whipmering proudly, you see she has your father's favorite keepsake clamped in her jaw."</p>
+        <p>"What is it"</p>
         <div class="row">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q4r1" name="question4" value="#" checked>
-              <label for="q4r1">Foo</label>
+              <label for="q4r1">"A picture of my great-grandmother."</label>
             </div>
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q4r2" name="question4" value="#">
-              <label for="q4r2">Foo</label>
+              <label for="q4r2">"His watch."</label>
             </div>
           </div>
         </div>
@@ -87,27 +101,45 @@
       </div>
       
       <div class="initially-hidden" id="question5">
+        <p>The box chirps and begins to vibrate intermittently, with a soft hum. The Inspector nods, the hint of a grin curling the edge of their lips. "We're nearly done here," they say quietly, almost a mutter. You aren't sure whether the comment was meant for you, or for themself.</p>
+        <p>"One last question," they say, resuming their full voice. "You've just finished a term at college and have returned to your hometown for the summer. You have met up with your old friends downtown and have been bar-hopping. Now, it is nearly midnight and you find yourself between bars, and outside of a tattoo parlor. Seeing that the lights are on, your best friend grabs your wrist and draws you inside. They drunkedly remind you about a childhood promise that if you were ever going to move away, you would get matching tattoos so that you wouldn't forget about each other. They chastise you for not sticking to the promise before you went to college.</p>
+        <p>You realize suddenly that you will likely be moving away permanently soon. At the end of next term, you expect to be taking an internship on the other side of the country, and your professor has informed you that interning with the company you chose could be the first step in a lucrative career - so long as you are willing to stay in that state.</p>
+        <p>Relenting, you agree to get a small tattoo, nowhere visible, to remind you of your friend. Overjoyed, they point to a sketchbook on the counter with several possible designs, featuring animals."</p>
+        <p>"What animal do you choose?"</p>
         <div class="row">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet fugit, illo harum voluptates ducimus sit nostrum quae explicabo placeat repellendus numquam corrupti dolorum accusantium iusto, laborum ad possimus optio ipsam.</p>
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q5r1" name="question5" value="#" checked>
-              <label for="q5r1">Foo</label>
+              <label for="q5r1">"A snake."</label>
             </div>
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q5r2" name="question5" value="#">
-              <label for="q5r2">Foo</label>
+              <label for="q5r2">"A bird."</label>
             </div>
             <div class="form-check">
               <input type="radio" class="form-check-input" id="q5r3" name="question5" value="#">
-              <label for="q5r3">Foo</label>
+              <label for="q5r3">"A rat."</label>
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-secondary btn-block">Await your fate.</button>
+        <button type="submit" class="btn btn-secondary btn-block next-question">Answer and await your fate.</button>
       </div>
-    </form>
+
+      <div class="initially-hidden" id="results-panel">
+        <p>The box suddenly stops vibrating. With a whispering sound, a small piece of paper issues from the side facing the Inspector. Snatching the paper, the Inspector peers at it.<span id="question5-matched"></span></p>
+        <p>They hand you the slip of paper, face down. Nervously, you turn over the page. On the other side is printed a small, stylized image of an animal:</p>
+        <div class="results-logo"></div>
+        <div class="row">
+          <div class="col-6">
+            <button class="btn btn-secondary btn-block">Accept your fate.</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-secondary btn-block">No! There's been a mistake! Restart the simulation!</button>
+          </div>
+        </div>
+      </div>
+    </form> 
   </div>
 </body>
 </html>
