--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 <body>
   <div class="container">
+    <div class = "jumbotron">
+
+    </div>
     <form id="quiz-form">
-      <div id="question1">
+      <div class="form-group">
+        <label for="nameEntry">Please enter your name to begin:</label>
+        <input type="text" id="nameEntry">
+        <button class="btn btn-secondary btn-block next-question">Begin simulation.</button>
+      </div>
+
+      <div class="initially-hidden" id="question1">
         <p>There is a soft tapping at your office door. Despite the suddenness of the interruption, you aren't startled. You've been expecting this - only you can say whether you are ready for the visit, however.</p>
         <p>"Come in," you say, forcing your voice to be calm.</p>
         <p>The door opens, and the visitor enters quickly. After a furtive glance back out into the hallway, they shut the door gently, deftly moving the large briefcase they carry out of the way as the door swings closed. They release the doorknob slowly, as if to execute the rotation without any noise. You wonder briefly at the circumspect nature of your visitor's entry. After all, aren't you the one with something, <em>allegedly,</em> to hide?</p>
@@ -28,15 +37,15 @@
             </div>
           </div>
         </div> 
-        <button class="btn btn-secondary btn-block next-question">Next</button>
+        <button class="btn btn-secondary btn-block next-question first-question">Next</button>
       </div>
 
       <div class="initially-hidden" id="question2">
-        <p><span id="question1-response"></span></p>
-        <p>The Inspector sets their heavy briefcase on the table and releases the clasps. They give you a significant look, before opening the lid. In spite of the size of the box, only two small items are nestled inside, in ample padding. The Inspector selects one of these, a small box with various wires attached to it, and places it between you on the desk. The piercing gaze meets your eyes again.</p>
-        <p>Supressing any reservations, you nod. It would be impossible to turn back, at this point. Better to undergo the testing here, "voluntarily", than in a concrete room at the local precinct. At your assent, the Inspector attaches the wires, which you now notice terminate in small clamps, to a few of your fingertips, and the lobe of your left ear. Returning to the briefcase, the Inspector lifts the second object, a sleek, blue-glassed monocle, and holds it to their right eye.</p>
+        <p>The Inspector sets their heavy briefcase on the table and releases the clasps. They give you an appraising look, then open the lid. In spite of the size of the briefcase, only two small items are inside, neatly slotted into molded foam padding. The Inspector selects one of these, a small box with various wires attached to it, and places it between the two of you on the desk. The piercing gaze meets your eyes again.</p>
+        <p>Supressing any reservations, you nod. It would be impossible to turn back, at this point. Better to undergo the testing here, "voluntarily", than in a concrete room at the local precinct. At your assent, the Inspector uses small pieces of plastic tape to attach the wires to a few of your fingertips and the lobe of your left ear. Returning to the briefcase, the Inspector lifts the second object, a sleek, blue-glassed monocle, and holds it before their right eye.</p>
         <p>"As you understand, this is an inquiry," they say. "I will describe to you a number of hypothetical situations. After describing the situation, I will ask you a question. Simply respond honestly." Another significant look. "I will advise you that the results of the examination will be more accurate, the less you hesitate in your responses."</p>
-        <p>After a moment, they continue."Let's begin. You are a well appointed vacation rental in the hills of a picturesque winter resort-town, with your parter. It is evening, and you have just eaten dinner. The air still contains the lingering scent of your meal. The dinner conversation was pleasant, but afterword your partner mentioned off-handedly that you have been invited to an apres-ski party tomorrow, by their cousin, Nathan. Your last interaction with Nathan was several months ago. At that time, he had returned your car after borrowing it, with a noticable dent in the front right fender. He claimed it was a hit and run event while he was parallel parked in a residential neighborhood, while visiting a friend. But, you think he was lying.</p>
+        <p>After a moment, they continue."Let's begin. You are staying at a well appointed vacation rental in the hills of a picturesque winter resort-town, with your parter. It is evening, and you have just eaten dinner. The air still contains the lingering scent of your meal. After dinner your partner mentions off-handedly that you have been invited to an apres-ski party tomorrow by their cousin, Nathan.</p>
+        <p>Your last interaction with Nathan was several months ago. He returned your car with a noticable dent in the front right fender, after borrowing it for a day. He claimed it was a hit and run event while he was parallel parked in a residential neighborhood visiting a friend. But, you think he was lying.</p>
         <p>"What did you have for dinner?"</p>
         <div class="row">
           <h4 class="col-5">You respond:</h4>
@@ -57,8 +66,8 @@
       <div class="initially-hidden" id="question3">
         <p>The box whirs mechanically. The Inspector glances down at it briefly, taps the side of their monocle, and continues.</p>
         <p>"You are a third-term city councilperson for your birthtown. You have just left a contentious town-hall meeting regarding a proposal to develop what is currently a city park into a new business center. The investors in the project are an out of town-cosortium of developers who have a successful history of such projects. In those instances, the developments led to a significant increase in tax income in their respective locations, and creation of hundreds of new jobs. The opponents of the proposal argue that the historical value of the park should disqualify it from any discussion of possible redevlopment.</p>
-        <p>The park is in fact the town's oldest, and features a number of notable statues created by a nationally-famous sculptor who was raised in the town and passed away seven years ago. However, the park has not been well maintained, and recently there has been an increase in crime associated with the area. Noting the significance of the statues, the out of state investors have offered to feature the artwork in a speical plaza contained within the new development, or to relocate the statues to other city properties, at their own expense.</p>
-        <p>As you are mulling over the situation during your walk home, a care swerves unexpectedly into a bicycle lane, forcing a cyclist using the lane to likewise swerve onto the sidewalk. Unfortunately, they fail to negotiate the curb, and they end up crashing into you, tearing a large hole in your suit, and brusing your side. It hurts quite a lot, and as you pull the torn fabric away, you notice that you are bleeding at a frightening rate. You think you might see bone.</p>
+        <p>"The park is in fact the town's oldest, and features a number of notable statues created by a nationally-famous sculptor who was raised in the town and passed away seven years ago. However, the park has not been well maintained, and recently there has been an increase in crime associated with the area. Noting the significance of the statues, the out of state investors have offered to feature the artwork in a special plaza contained within the new development, or to relocate the statues to other city properties, at their own expense.</p>
+        <p>"As you are mulling over the situation during your walk home, a car swerves unexpectedly into a bicycle lane, forcing a cyclist using the lane to likewise swerve onto the sidewalk. Unfortunately, they fail to negotiate the curb, and they end up crashing into you, tearing a large hole in your suit, and bruising your side. It hurts quite a lot, and as you pull the torn fabric away, you notice that you are bleeding at a frightening rate. You think you might see bone.</p>
         <p>"The cyclist has picked himself up from the ground, and noticing your injuries, begins to frantically apologize and reassure you. He pulls out his communicator and begin to dial for emergency services.</p>
         <p>"What color is your suit?"</p>
         <div class="row">
@@ -79,11 +88,11 @@
 
       <div class="initially-hidden" id="question4">
         <p>The Inspector examines the box again for a few moments before returning their gaze to you.</p>
-        <p>"I apologize for the graphic nature of that last question. In order to be accurate, the inquiry is designed to elicit emotional and phyisiological responses. I hope you understand."</p>
+        <p>"I apologize for the graphic nature of that last question. In order to be accurate, the inquiry is designed to elicit emotional and physiological responses. I hope you understand."</p>
         <p>Without waiting for you to possibly respond to their comments, the Inspector continues immediately with the next question.</p>
         <p>"You are five years old. Your parents have left you home for the evening with a babysitter while they visit another couple for a date night. You are an only child, and are playing fetch with your pet dog in the backyard, while the babysitter watches from the porch. It is Autumn, and your dog has ignored your last throw of the ball to fixate on a pile of leaves beneath a large oak tree in the middle of the yard. You run over to hug the dog and try to regain its attention. She ignores you and begins to dig at the pile of leaves.</p>
-        <p>The last rays of the setting sun are filtering through the remaining oak leaves above, dappling the fallen leaves with spots of purple, mauve, and dark orange shadow. As your dog digs, you notice that underneath the leaves is a new mound of freshly turned dirt. The dog speeds up her digging, and darts her snout in to seize at a buried object. As she turns to you, whipmering proudly, you see she has your father's favorite keepsake clamped in her jaw."</p>
-        <p>"What is it"</p>
+        <p>The last rays of the setting sun are filtering through the remaining oak leaves above, dappling the ground with spots of purple, mauve, and dark orange shadows. As your dog digs, you notice that underneath the leaves is a mound of loose dirt. The dog speeds up her digging, filling the air with the scent of soil. She darts her snout in to seize at a buried object. She turns to you with the object between her jaws, whipmering proudly. You see now that she has dug up your father's favorite keepsake.</p>
+        <p>"What is it?"</p>
         <div class="row">
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
@@ -104,7 +113,7 @@
         <p>The box chirps and begins to vibrate intermittently, with a soft hum. The Inspector nods, the hint of a grin curling the edge of their lips. "We're nearly done here," they say quietly, almost a mutter. You aren't sure whether the comment was meant for you, or for themself.</p>
         <p>"One last question," they say, resuming their full voice. "You've just finished a term at college and have returned to your hometown for the summer. You have met up with your old friends downtown and have been bar-hopping. Now, it is nearly midnight and you find yourself between bars, and outside of a tattoo parlor. Seeing that the lights are on, your best friend grabs your wrist and draws you inside. They drunkedly remind you about a childhood promise that if you were ever going to move away, you would get matching tattoos so that you wouldn't forget about each other. They chastise you for not sticking to the promise before you went to college.</p>
         <p>You realize suddenly that you will likely be moving away permanently soon. At the end of next term, you expect to be taking an internship on the other side of the country, and your professor has informed you that interning with the company you chose could be the first step in a lucrative career - so long as you are willing to stay in that state.</p>
-        <p>Relenting, you agree to get a small tattoo, nowhere visible, to remind you of your friend. Overjoyed, they point to a sketchbook on the counter with several possible designs, featuring animals."</p>
+        <p>Relenting, you agree to get a small tattoo, nowhere visible, to remind you of your friend. Overjoyed, they point to a sketchbook on the counter with several possible designs, featuring animals.</p>
         <p>"What animal do you choose?"</p>
         <div class="row">
           <h4 class="col-5">You respond:</h4>
@@ -130,6 +139,7 @@
         <p>The box suddenly stops vibrating. With a whispering sound, a small piece of paper issues from the side facing the Inspector. Snatching the paper, the Inspector peers at it.<span id="question5-matched"></span></p>
         <p>They hand you the slip of paper, face down. Nervously, you turn over the page. On the other side is printed a small, stylized image of an animal:</p>
         <div class="results-logo"></div>
+        <p>You hear a small snort. Looking up from the page, you are horrified to see that the Inspector is laughing at you, their shoulders shaking with mirth as they try to suppress their chuckles. "<span class="language-chosen"></span>," they burst out. "You've done well to hide yourself so far, but your nature is obvious to someone like me who is trained to see it. Android <span id="name"></span>, you will report immediately to code camp for re-programming in <span class="language-chosen"></span>!</p>
         <div class="row">
           <div class="col-6">
             <button class="btn btn-secondary btn-block">Accept your fate.</button>
