add remaining ui code. Known bug: every button currently triggers submit event

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     </div>
     <form id="quiz-form">
-      <div class="form-group">
-        <label for="nameEntry">Please enter your name to begin:</label>
-        <input type="text" id="nameEntry">
+      <div class="question0">
+        <div class="form-group">
+          <label for="nameEntry">Please enter your name to begin:</label>
+          <input type="text" id="nameEntry">
+        </div>
         <button class="btn btn-secondary btn-block next-question">Begin simulation.</button>
       </div>
 
@@ -51,11 +53,11 @@
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q2r1" name="question2" value="#" checked>
+              <input type="radio" class="form-check-input" id="q2r1" name="question2" value="Python" checked>
               <label for="q2r1">"Turkey, with mashed potatoes and gravy."</label>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q2r2" name="question2" value="#">
+              <input type="radio" class="form-check-input" id="q2r2" name="question2" value="Go">
               <label for="q2r2">"Roasted eggplant."</label>
             </div>
           </div>
@@ -74,11 +76,11 @@
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q3r1" name="question3" value="#" checked>
+              <input type="radio" class="form-check-input" id="q3r1" name="question3" value="Go" checked>
               <label for="q3r1">"Slate grey."</label>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q3r2" name="question3" value="#">
+              <input type="radio" class="form-check-input" id="q3r2" name="question3" value="Swift">
               <label for="q3r2">"What... I'm bleeding! Red?! I mean, it is grey, I suppose."</label>
             </div>
           </div>
@@ -97,11 +99,11 @@
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q4r1" name="question4" value="#" checked>
+              <input type="radio" class="form-check-input" id="q4r1" name="question4" value="Python" checked>
               <label for="q4r1">"A picture of my great-grandmother."</label>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q4r2" name="question4" value="#">
+              <input type="radio" class="form-check-input" id="q4r2" name="question4" value="Swift">
               <label for="q4r2">"His watch."</label>
             </div>
           </div>
@@ -119,15 +121,15 @@
           <h4 class="col-5">You respond:</h4>
           <div class="col-7">
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q5r1" name="question5" value="#" checked>
+              <input type="radio" class="form-check-input" id="q5r1" name="question5" value="Python" checked>
               <label for="q5r1">"A snake."</label>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q5r2" name="question5" value="#">
+              <input type="radio" class="form-check-input" id="q5r2" name="question5" value="Swift">
               <label for="q5r2">"A bird."</label>
             </div>
             <div class="form-check">
-              <input type="radio" class="form-check-input" id="q5r3" name="question5" value="#">
+              <input type="radio" class="form-check-input" id="q5r3" name="question5" value="Go">
               <label for="q5r3">"A rat."</label>
             </div>
           </div>
@@ -139,7 +141,7 @@
         <p>The box suddenly stops vibrating. With a whispering sound, a small piece of paper issues from the side facing the Inspector. Snatching the paper, the Inspector peers at it.<span id="question5-matched"></span></p>
         <p>They hand you the slip of paper, face down. Nervously, you turn over the page. On the other side is printed a small, stylized image of an animal:</p>
         <div class="results-logo"></div>
-        <p>You hear a small snort. Looking up from the page, you are horrified to see that the Inspector is laughing at you, their shoulders shaking with mirth as they try to suppress their chuckles. "<span class="language-chosen"></span>," they burst out. "You've done well to hide yourself so far, but your nature is obvious to someone like me who is trained to see it. Android <span id="name"></span>, you will report immediately to code camp for re-programming in <span class="language-chosen"></span>!</p>
+        <p>You hear a small snort. Looking up from the page, you are horrified to see that the Inspector is laughing at you, their shoulders shaking with mirth as they try to suppress their chuckles. "<span class="language-chosen"></span>," they burst out. "You've done well to hide yourself so far, but your nature is obvious to someone like me who is trained to see it. Android <span id="name"></span>, you will report immediately to code camp for re-programming in <span class="language-chosen"></span>!"</p>
         <div class="row">
           <div class="col-6">
             <button class="btn btn-secondary btn-block">Accept your fate.</button>
